<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.cis.CisFragment">

        <RelativeLayout
            android:id="@+id/codeCisRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/codeCisTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/code_cis_title"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_below="@id/codeCisTV"
                android:hint="@string/code_cis_search"
                android:inputType="text" />

            <TextView
                android:id="@+id/medicamentTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/autoCompleteTextView"
                android:gravity="center"
                android:textSize="20sp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/pharmacieRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/codeCisRL"
            android:layout_alignStart="@id/codeCisRL"
            android:layout_marginTop="@dimen/activity_vertical_margin">


            <TextView
                android:id="@+id/pharmacieTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/codeCisTV"
                android:gravity="center"
                android:text="@string/pharmacy_title"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/pharmacieACTV"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_below="@id/pharmacieTV"
                android:hint="@string/pharmacy_search"
                android:inputType="text" />

        </RelativeLayout>

        <Button
            android:id="@+id/signalerB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pharmacieRL"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/buttonBackground"
            android:text="@string/report"
            android:textColor="@color/text_dark"
            app:cornerRadius="50dp" />

    </RelativeLayout>
</ScrollView>