<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#FF000000 ">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_background">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:text="@string/delete_history_dialog_confirm"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/dialogTitle"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <Button
                android:id="@+id/negativeButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.5"
                android:backgroundTint="?attr/buttonBackground"
                android:text="@string/cancel"
                android:textColor="@color/text_dark"
                android:textSize="12sp"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="0.5"
                android:backgroundTint="?attr/buttonBackground"
                android:text="@string/delete"
                android:textColor="@color/text_dark"
                android:textSize="12sp"
                app:cornerRadius="50dp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>