<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotPasswordRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">

    <ImageView
        android:id="@+id/forgotPassword_backgroundIV"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/top_background" />

    <TextView
        android:id="@+id/forgotPassword_headerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/baseMarginTop"
        android:text="@string/forgotPasswordTitle"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/forgotPassword_infosCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/forgotPassword_resetPasswordBTN"
        android:layout_below="@id/forgotPassword_headerTV"
        android:layout_marginStart="@dimen/accountCardViewMarginStart"
        android:layout_marginTop="@dimen/baseMarginTop"
        android:layout_marginEnd="@dimen/accountCardViewMarginEnd"
        android:layout_marginBottom="@dimen/baseMarginBottom"
        app:cardElevation="@dimen/accountCardViewElevation">

        <ScrollView
            android:id="@+id/forgotPassword_infosSV"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/forgotPassword_infosRL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingStart="10dp"
                android:paddingTop="@dimen/accountPadding"
                android:paddingEnd="10dp"
                android:paddingBottom="@dimen/accountPadding">

                <TextView
                    android:id="@+id/forgotPassword_infosHeaderTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/forgotPasswordHeader"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/forgotPassword_mailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forgotPassword_infosHeaderTV"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/baseMarginTop"
                    android:autofillHints="InputMail"
                    android:drawableStart="@drawable/ic_mail"
                    android:hint="@string/hintMail"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/accountTextSize" />

                <Spinner
                    android:id="@+id/forgotPassword_secretQuestionSP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forgotPassword_mailET"
                    android:layout_marginTop="@dimen/baseMarginTop"
                    android:entries="@array/questionsSecretes" />

                <EditText
                    android:id="@+id/forgotPassword_secretAnswerET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forgotPassword_secretQuestionSP"
                    android:layout_marginTop="@dimen/baseMarginTop"
                    android:autofillHints="InputSecretAnswer"
                    android:drawableStart="@drawable/ic_secret_answer"
                    android:hint="@string/hintSecretAnswer"
                    android:inputType="text"
                    android:textSize="@dimen/accountTextSize" />

                <EditText
                    android:id="@+id/forgotPassword_newPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forgotPassword_secretAnswerET"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/baseMarginTop"
                    android:autofillHints="InputMdp"
                    android:drawableStart="@drawable/ic_password"
                    android:hint="@string/hintNewPassword"
                    android:inputType="textPassword"
                    android:textSize="@dimen/accountTextSize" />

                <EditText
                    android:id="@+id/forgotPassword_newPasswordVerifyET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forgotPassword_newPasswordET"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/baseMarginTop"
                    android:autofillHints="InputMdp"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/hintPasswordVerify"
                    android:inputType="textPassword"
                    android:textSize="@dimen/accountTextSize" />

                <Button
                    android:id="@+id/forgotPassword_signUpBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@id/forgotPassword_newPasswordVerifyET"
                    android:layout_marginTop="@dimen/baseMarginTop"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_redirection_arrow"
                    android:text="@string/logInSignUp"
                    android:textAllCaps="false"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/accountSmallTextSize" />

            </RelativeLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/forgotPassword_resetPasswordBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/accountCardViewMarginStart"
        android:layout_marginEnd="@dimen/accountCardViewMarginEnd"
        android:layout_marginBottom="@dimen/baseMarginBottom"
        android:text="@string/forgotPasswordTitle" />

</RelativeLayout>