<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">

    <ImageView
        android:id="@+id/login_backgroundIV"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/top_background" />

    <TextView
        android:id="@+id/login_headerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/baseMarginTop"
        android:text="@string/logInTitle"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />


    <androidx.cardview.widget.CardView
        android:id="@+id/login_infosCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_logInBTN"
        android:layout_below="@id/login_headerTV"
        android:layout_marginStart="@dimen/accountCardViewMarginStart"
        android:layout_marginTop="@dimen/baseMarginTop"
        android:layout_marginEnd="@dimen/accountCardViewMarginEnd"
        android:layout_marginBottom="@dimen/baseMarginBottom"
        app:cardElevation="@dimen/accountCardViewElevation">

        <ScrollView
            android:id="@+id/login_infosSV"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/login_infosRL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingStart="10dp"
                android:paddingTop="@dimen/accountPadding"
                android:paddingEnd="10dp"
                android:paddingBottom="@dimen/accountPadding">

                <TextView
                    android:id="@+id/login_infosHeaderTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/logInHeader"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/login_mailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_infosHeaderTV"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:autofillHints="InputMail"
                    android:drawableStart="@drawable/ic_mail"
                    android:hint="@string/hintMail"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/accountTextSize" />

                <TextView
                    android:id="@+id/login_errorMailTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_mailET"
                    android:text="@string/errorEmptyField"
                    android:textColor="?attr/errorMessageColor"
                    android:textSize="@dimen/accountSmallTextSize" />

                <LinearLayout
                    android:id="@+id/login_passwordLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_errorMailTV"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/baseMarginTop"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/login_passwordET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="InputMdp"
                        android:drawableStart="@drawable/ic_password"
                        android:hint="@string/hintPassword"
                        android:inputType="textPassword"
                        android:textSize="@dimen/accountTextSize" />

                    <ImageButton
                        android:id="@+id/login_passwordVisibilityBTN"
                        android:layout_width="@dimen/passwordVisibilityIconSize"
                        android:layout_height="@dimen/passwordVisibilityIconSize"
                        android:layout_alignTop="@id/createAccount_passwordET"
                        android:layout_toRightOf="@id/createAccount_passwordET"
                        android:background="@drawable/ic_show_password" />

                </LinearLayout>

                <TextView
                    android:id="@+id/login_errorPasswordTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_passwordLL"
                    android:text="@string/errorEmptyField"
                    android:textColor="?attr/errorMessageColor"
                    android:textSize="@dimen/accountSmallTextSize" />

                <Button
                    android:id="@+id/login_noAccountBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@id/login_errorPasswordTV"
                    android:layout_marginTop="@dimen/baseMarginTop"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_redirection_arrow"
                    android:text="@string/logInSignUp"
                    android:textAllCaps="false"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/accountSmallTextSize" />

                <Button
                    android:id="@+id/login_forgotPasswordBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@id/login_noAccountBTN"
                    android:background="@android:color/transparent"
                    android:text="@string/logInForgotPassword"
                    android:textAllCaps="false"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/accountSmallTextSize" />
            </RelativeLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/login_logInBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/accountCardViewMarginStart"
        android:layout_marginEnd="@dimen/accountCardViewMarginEnd"
        android:layout_marginBottom="@dimen/baseMarginBottom"
        android:text="@string/logInTitle" />

</RelativeLayout>